git-ops/apps/service-a/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a-ingress
  namespace: argo-cd
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - service-a.archainia.app
      secretName: archainia-wildcard-tls

  rules:
    - host: service-a.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
